# nuts

./: .dockerignore  .gitignore  .gitlab-ci.yml  .landscape.yml  .make-release.sh  .mypy.ini  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  Dockerfile  LICENCE  LICENSE  PKGBUILD  README.md  README.rst  make-release.sh  mypy.ini  nuts  nuts.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-push.yaml  publish-to-pypi.yml  run-mock_project.yml  run-tests-against-pytest-master.yaml  run-tests.yml
_modules/: nuts.py
_xml-spec/: aristatests.yml  ciscotests.yml  device.yml  nuts.odm  nuts.py  testcases.yml
_xml-spec/_modules/: nuts.py
_xml-spec/src/application/: Logger.py  TestController.py
_xml-spec/src/data/: TestSuite.py
_xml-spec/src/service/: FileHandler.py  Runner.py
_xml-spec/test/: test_TestSuite.py
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/install/: index.rst  salt_api.rst  salt_napalm.rst  salt_setup.rst
doc/source/tests/: arp.rst  bandwidth.rst  checkuser.rst  checkversion.rst  connectivity.rst  dhcpcheck.rst  dnscheck.rst  index.rst  interfacespeed.rst  interfacestatus.rst  portresponse.rst  traceroute.rst  webresponse.rst
doc/source/usecases/: index.rst
docs/diagrams/: NUTS Needed classes for tests.drawio  NUTS Test collection.drawio  NUTS Workflow.drawio  nuts-ablauf-en.drawio  nuts-ablauf.drawio
docs/source/: conf.py  index.rst
docs/source/advanced/: cli.rst
docs/source/api/: index.rst  modules.rst  pytest_nuts.base_tests.rst  pytest_nuts.helpers.rst  pytest_nuts.rst  tests.base_tests.rst  tests.helpers.rst  tests.rst
docs/source/dev/: index.rst  writetestclasses.rst  writetests.rst
docs/source/installation/: index.rst  install.rst
docs/source/quickstart/: index.rst
docs/source/reports/: reports.rst
docs/source/testbundles/: alltestbundles.rst
docs/source/tutorial/: firststeps.rst  index.rst
docs/source/usage/: index.rst
examples/: arp.yml  bandwidth.yml  dhcpcheck.yml  dnscheck.yml  interface.yml  interfacestatus.yml  portresponse.yml  users.yml  version.yml  webresponse.yml
nuts/: config.yml  context.py  hooks.py  index.py  main.py  nuts  nuts.py  nuts_init.py  plugin.py  setup.py  yamlloader.py
nuts/application/: logger.py  test_controller.py  validation_controller.py
nuts/base_tests/: napalm_bgp_neighbors.py  napalm_get_arp.py  napalm_get_config.py  napalm_get_users.py  napalm_get_vlans.py  napalm_get_vrf.py  napalm_interfaces.py  napalm_lldp_neighbors.py  napalm_network_instances.py  napalm_ping.py  netmiko_cdp_neighbors.py  netmiko_iperf.py  netmiko_ospf_neighbors.py
nuts/data/: evaluation.py  evaluation_result.py  test_case.py  test_suite.py
nuts/examples/: connectivity.yml  interfacespeed.yml  traceroute.yml
nuts/helpers/: cach.py  cache.py  context.py  converters.py  errors.py  filters.py  result.py
nuts/service/: evaluator.py  file_handler.py  file_validator.py  runner.py  salt_api_wrapper.py  settings.py  testSchema.yaml  test_schema.py
nuts/src/application/: Logger.py  TestController.py  ValidationController.py
nuts/src/data/: Device.py  Evaluation.py  EvaluationResult.py  TestCase.py  TestSuite.py
nuts/src/service/: Evaluator.py  FileHandler.py  FileValidator.py  Runner.py  deviceSchema.yaml  salt_api_wrapper.py  settings.py
nuts/test/: test_Evaluation.py  test_Evaluator.py  test_Evalutator.py  test_Runner.py  test_TestSuite.py  test_evaluation.py  test_evaluator.py  test_runner.py  test_testsuite.py
pytest_nuts/: context.py  host_filter.py  index.py  napalm_interface.py  netmiko_cdp_neighbors.py  netmiko_ping.py  nuts_napalm_interface.py  nuts_netmiko_ping.py  plugin.py  yaml2test.py  yaml_to_test.py  yamlconverter.py  yamlloader.py
pytest_nuts/base_tests/: napalm_bgp_neighbors.py  napalm_get_users.py  napalm_interface.py  napalm_interfaces.py  napalm_lldp_neighbors.py  napalm_network_instances.py  napalm_ping.py  netmiko_cdp_neighbors.py  netmiko_iperf.py  netmiko_ospf_neighbors.py  netmiko_ping.py
pytest_nuts/helpers/: converters.py  data.py  errors.py  result.py
release_notes/: v3.0.0.md  v3.0.0a1.md  v3.0.1.md  v3.0.2.md  v3.1.0.md  v3.2.0.md  v3.3.0.md  v3.4.0.md  v3.5.0.md  v3.5.1.md  v3.6.0.md
src/application/: ValidationController.py
src/data/: Device.py  TestCase.py
src/nuts/: context.py  yamlloader.py
src/nuts/base_tests/: napalm_bgp_neighbors.py  napalm_get_config.py  napalm_get_vlans.py  napalm_interfaces.py  napalm_network_instances.py  napalm_ping.py  netmiko_cdp_neighbors.py  netmiko_iperf.py  netmiko_ospf_neighbors.py
src/nuts/helpers/: context.py
src/service/: Evaluator.py  FileValidator.py
test/: test_evaluation.py  test_evaluator.py  test_runner.py  test_testsuite.py
tests/: conftest.py  shared.py  test_class_loading.py  test_context.py  test_hooks.py  test_index.py  test_module_level_fixtures.py  test_nonir_fixtures.py  test_nornir_fixtures.py  test_nuts_annotation.py  test_nuts_init.py  utils.py
tests/base_tests/: class_loading.py  conftest.py  module_level_fixtures.py  simple_nuts_annotation.py  test_napalm_bgp_neighbors.py  test_napalm_get_arp.py  test_napalm_get_config.py  test_napalm_get_users.py  test_napalm_get_vlans.py  test_napalm_get_vrf.py  test_napalm_interfaces.py  test_napalm_lldp_neighbors.py  test_napalm_network_instances.py  test_napalm_ping.py  test_napalm_vlans.py  test_netmiko_cdp_neighbors.py  test_netmiko_iperf.py  test_netmiko_ospf_neighbors.py
tests/base_tests/test_napalm_get_vlans/: test_napalm_only_defined_vlans_exist.py  test_napalm_vlans.py
tests/helpers/: check_result.py  selftest_helpers.py  shared.py  test_cache.py  test_converters.py  test_cotext_helpter.py  test_filter.py  test_result.py
tests/mock_project/: README.md  nuts_config.yaml
tests/mock_project/inventory_data/: hosts.yaml
tests/mock_project/mocked_napalm_data/: get_arp_table.1  get_interfaces.1  get_users.1  get_vlans.1
tests/mock_project/tests/: test_arp.yaml  (+3 more)
tests/showcase/: dry_run.py  showcase_expanse.py
tests/showcase_test/: test-expanse.yaml
